--- a/ArticleList/View/Base.lproj/Main.storyboard
+++ b/ArticleList/View/Base.lproj/Main.storyboard
@@ -23,6 +23,21 @@
             </objects>
             <point key="canvasLocation" x="68" y="4"/>
         </scene>
+        <!--Details View Controller-->
+        <scene sceneID="yP3-vQ-IYK">
+            <objects>
+                <viewController id="l2h-jD-hjH" customClass="DetailsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2EF-jI-npI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="n7L-NK-odd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V55-tK-XUB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="774" y="11"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
